--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <img src="assets/logo.png" alt="Логотип школы" class="logo">
-            <h1>Школа программирования для детей</h1>
+            <h1>Vlabs: Школа программирования для детей</h1>
             <nav>
                 <ul class="menu">
                     <li><a href="#about">О нас</a></li>
