--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>О нас</h2>
-            <p>Мы — образовательный центр, где дети учатся программированию в игровой форме! Наши курсы помогают развивать логическое мышление, творчество и навыки решения задач.</p>
+            <p>"Место, где можно поиграть в создание игр, роботов и приложений. Учиться здесь - это как играть, только ещё круче!"</p>
         </div>
     </section>
 
