--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>О нас</h2>
-            <p>"Место, где можно поиграть в создание игр, роботов и приложений. Учиться здесь - это как играть, только ещё круче!"</p>
+            <p>Весело учим, создавать игры, роботов и приложения. Учиться здесь - это как играть, только ещё круче!</p>
         </div>
     </section>
 
@@ -59,7 +59,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Школа программирования для детей. Все права защищены.</p>
+            <p>&copy; 2025 V labs. Все права защищены.</p>
         </div>
     </footer>
 
