--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>О нас</h2>
-            <p>Весело учим создавать игры, роботов и приложения. Учиться здесь - это как играть, только ещё круче!</p>
+            <p>Весело учим создавать игры, роботов и приложения. Учиться здесь - это как играть, только ещё круче!!</p>
         </div>
     </section>
 
