--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="course-item">
                     <h3>Python</h3>
-                    <p>Первый шаг в мире текстового программирования.</p>
+                    <p>Scratch Jr: увлекательное введение в мир программирования через создание интерактивных историй, игр и анимаций.</p>
                 </div>
                 <div class="course-item">
                     <h3>Roblox Studio</h3>
