--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>Изучение основ программирования через визуальный конструктор.</p>
                 </div>
                 <div class="course-item">
-                    <h3>Python</h3>
+                    <h3>Scratch Jr</h3>
                     <p>Scratch Jr: увлекательное введение в мир программирования через создание интерактивных историй, игр и анимаций.</p>
                 </div>
                 <div class="course-item">
