--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="assets/logo.png" alt="Логотип школы" class="logo">
+            <img src="https://app.logoza.ru/?logo=731b1ba53e2b8df70a81b2c4de3e1c31" alt="Логотип школы" class="logo">
             <h1>Школа программирования для детей</h1>
             <nav>
                 <ul class="menu">
