--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1>Наши курсы</h1>
             <p class="tagline">Выберите направление, которое понравится вашему ребёнку</p>
-            <a href="VLabs.html" class="btn secondary">← На главную</a>
+            <a href="index.html" class="btn secondary">← На главную</a>
         </div>
     </header>
     
