--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <h1>V-labs</h1>
             <p class="tagline">Школа программирования для детей: создаём игры, а не просто играем!</p>
             <div class="header-buttons">
-                
+                <a href="https://t.me/VLabsV" class="btn">Записаться</a>
                 <a href="#courses" class="btn secondary">Наши курсы</a>
             </div>
         </div>
@@ -659,12 +659,12 @@
         </div>
     </section>
 
-   
-
     <footer>
         <div class="container">
             <h3>V-labs — школа программирования для детей</h3>
-            
+            <div class="social-links">
+                <a href="https://t.me/VLabsV" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+            </div>
             <p>© 2023 Все права защищены</p>
         </div>
     </footer>
