Add 'Записаться' buttons to course cards and align footer buttons

--- a/index.html
+++ b/index.html
@@ -558,6 +558,8 @@
             text-align: center;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
             transition: transform 0.3s ease;
+            display: flex;
+            flex-direction: column;
         }
 
         .course-card:hover {
@@ -579,6 +581,13 @@
         .course-card p {
             color: var(--gray);
             font-size: 1rem;
+        }
+
+        .course-footer {
+            margin-top: auto;
+            display: flex;
+            justify-content: center;
+            padding-top: 1rem;
         }
     </style>
 </head>
@@ -629,31 +638,49 @@
                     <div class="course-icon">🐱</div>
                     <h3>Scratch</h3>
                     <p>Основы программирования через создание интерактивных историй, игр и анимаций</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
                 <div class="course-card">
                     <div class="course-icon">😺</div>
                     <h3>Scratch Jnr</h3>
                     <p>Программирование для самых маленьких (6-8 лет) с использованием визуальных блоков</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
                 <div class="course-card">
                     <div class="course-icon">🎮</div>
                     <h3>Kodu</h3>
                     <p>Создание 3D-игр с помощью визуального языка программирования от Microsoft</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
                 <div class="course-card">
                     <div class="course-icon">💻</div>
                     <h3>Комп. грамотность</h3>
                     <p>Основы работы с компьютером, интернетом и офисными приложениями</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
                 <div class="course-card">
                     <div class="course-icon">🧩</div>
                     <h3>Компас</h3>
                     <p>Основы черчения и 3D-моделирования в системе КОМПАС-3D</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
                 <div class="course-card">
                     <div class="course-icon"> 🎮 </div>
                     <h3>Roblox Studio</h3>
                     <p>Моделирование и создание игр в Roblox Studio</p>
+                    <div class="course-footer">
+                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                    </div>
                 </div>
             </div>
         </div>
