--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>V-labs - Школа программирования для детей</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css  ">
     <style>
         * {
             margin: 0;
@@ -115,6 +115,18 @@
 
         .btn.secondary:hover {
             background-color: rgba(255, 255, 255, 0.3);
+        }
+
+        .btn-sm {
+            padding: 14px 32px;
+            font-size: 1.1rem;
+            margin-top: 10px;
+            background-color: var(--secondary);
+            font-weight: 600;
+        }
+
+        .btn-sm:hover {
+            background-color: #322ba3;
         }
 
         /* Main Content */
@@ -586,7 +598,8 @@
         .course-footer {
             margin-top: auto;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            gap: 10px;
             padding-top: 1rem;
         }
     </style>
@@ -597,7 +610,7 @@
             <h1>V-labs</h1>
             <p class="tagline">Школа программирования для детей: создаём игры, а не просто играем!</p>
             <div class="header-buttons">
-                <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                 <a href="#courses" class="btn secondary">Наши курсы</a>
             </div>
         </div>
@@ -639,7 +652,8 @@
                     <h3>Scratch</h3>
                     <p>Основы программирования через создание интерактивных историй, игр и анимаций</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -647,7 +661,8 @@
                     <h3>Scratch Jnr</h3>
                     <p>Программирование для самых маленьких (6-8 лет) с использованием визуальных блоков</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -655,7 +670,8 @@
                     <h3>Kodu</h3>
                     <p>Создание 3D-игр с помощью визуального языка программирования от Microsoft</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -663,7 +679,8 @@
                     <h3>Комп. грамотность</h3>
                     <p>Основы работы с компьютером, интернетом и офисными приложениями</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -671,7 +688,8 @@
                     <h3>Компас</h3>
                     <p>Основы черчения и 3D-моделирования в системе КОМПАС-3D</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
                 <div class="course-card">
@@ -679,7 +697,8 @@
                     <h3>Roblox Studio</h3>
                     <p>Моделирование и создание игр в Roblox Studio</p>
                     <div class="course-footer">
-                        <a href="https://t.me/VLabsV" class="btn">Записаться</a>
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
                     </div>
                 </div>
             </div>
@@ -690,7 +709,7 @@
         <div class="container">
             <h3>V-labs — школа программирования для детей</h3>
             <div class="social-links">
-                <a href="https://t.me/VLabsV" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+                <a href="https://t.me/VLabsV  " aria-label="Telegram"><i class="fab fa-telegram"></i></a>
             </div>
             <p>© 2023 Все права защищены</p>
         </div>
