--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         /* Course Highlights */
         .course-highlights {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 30px;
             margin-top: 50px;
         }
@@ -660,6 +660,33 @@
                     <div class="course-icon">😺</div>
                     <h3>Scratch Jnr</h3>
                     <p>Программирование для самых маленьких (6-8 лет) с использованием визуальных блоков</p>
+                    <div class="course-footer">
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-icon">🚀</div>
+                    <h3>Scratch продвинутый</h3>
+                    <p>Расширенные возможности программирования, сложные проекты и алгоритмы</p>
+                    <div class="course-footer">
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-icon">🎮</div>
+                    <h3>Scratch игры</h3>
+                    <p>Создание сложных 2D и 3D игр с анимацией, физикой и ИИ</p>
+                    <div class="course-footer">
+                        <a href="#" class="btn btn-sm">Подробнее</a>
+                        <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <div class="course-icon">🧠</div>
+                    <h3>Нейросети</h3>
+                    <p>Основы машинного обучения и нейросетей для юных программистов</p>
                     <div class="course-footer">
                         <a href="#" class="btn btn-sm">Подробнее</a>
                         <a href="https://t.me/VLabsV  " class="btn">Записаться</a>
