--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         /* Course Highlights */
         .course-highlights {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 30px;
             margin-top: 50px;
         }
@@ -636,6 +636,31 @@
                     <div class="feature-icon">📚</div>
                     <h3>Логика программирования</h3>
                     <p>Разбираться в логике кода — легко и весело через практические проекты</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>Развиваем творческое мышление</h2>
+            <p class="center">Программирование — это не только логика, но и искусство создания виртуальных миров</p>
+            
+            <div class="features">
+                <div class="feature-card">
+                    <div class="feature-icon">🎨</div>
+                    <h3>Дизайн проектов</h3>
+                    <p>Создание уникальных визуальных стилей, персонажей и интерфейсов</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎭</div>
+                    <h3>Создание историй</h3>
+                    <p>Разработка сценариев и сюжетов для интерактивных игр и анимаций</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎵</div>
+                    <h3>Мультимедиа проекты</h3>
+                    <p>Интеграция звука, анимации и визуальных эффектов в творческие проекты</p>
                 </div>
             </div>
         </div>
